--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2019",
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": false
   },
   "exclude": [
     "node_modules"
