--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
-  }
+  },
+  "files": [
+    "src/**/*"
+  ]
 }
