--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2019",
     "sourceMap": true,
     "strict": false,
     "declaration": true,
+    "declarationMap": true,
     "outDir": "dist"
   },
   "exclude": [
