--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "lint": "tslint -p tsconfig.json"
   },
   "files": [
-    "dist/src/**/*",
-    "dist/docs/**/*",
-    "dist/api.json"
+    "dist/src/**/*"
   ]
 }
