--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advanced-promises",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Advanced promise types",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
