--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advanced-promises",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "description": "Advanced promise types",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -40,7 +40,7 @@
     "build-src": "tsc",
     "build-doc": "typedoc",
     "build": "yarn run build-src && yarn run build-doc",
-    "prepublish": "yarn run build && yarn run test",
+    "prepublishOnly": "yarn run build && yarn run test",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
   },
