--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advanced-promises",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "Advanced promise types",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -25,10 +25,17 @@
   "homepage": "https://github.com/WHenderson/advanced-promise#readme",
   "keywords": [
     "promise",
+    "promises",
     "abortable",
+    "abortable promise",
     "cancellable",
+    "cancellable promise",
     "timeout",
-    "process"
+    "timeout promise",
+    "process",
+    "process promise",
+    "async",
+    "advanced-promise"
   ],
   "license": "Apache-2.0",
   "author": {
