--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build": "yarn run build-src && yarn run build-doc",
     "pretest": "yarn run build-src",
     "test": "mocha",
+    "prepublishOnly": "yarn run build-doc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
   },
