--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ deploy:
       branch: master
   - provider: pages:git
     token: $GITHUB_TOKEN
+    local_dir: docs
     edge: true
     on:
       branch: master
